--- a/src/components/post-detail-table/post-detail-table.html
+++ b/src/components/post-detail-table/post-detail-table.html
@@ -1,36 +1,64 @@
 <div class="post-detail-table-wrapper">
   <ul class="overview-table mt-3 mb-4">
     <li>
-      <p>Trim</p>
-      <p>{{data.trim}}</p>
-    </li>
-    <li>
-      <p>Kilometers</p>
-      <p>{{data.distance}} kms</p>
-    </li>
-    <li>
-      <p>Warranty</p>
-      <p>{{data.warranty}}</p>
-    </li>
-    <li>
-      <p>Color</p>
-      <p>{{data.color}}</p>
-    </li>
-    <li>
-      <p>Year</p>
-      <p>{{data.make}}</p>
+      <p>Brand</p>
+      <p>{{data.company}}</p>
     </li>
     <li>
       <p>Model</p>
       <p>{{data.model}}</p>
     </li>
     <li>
-      <p>Brand</p>
-      <p>{{data.company}}</p>
+      <p>Trim</p>
+      <p>{{data.trim}}</p>
     </li>
     <li>
-      <p>Description</p>
-      <p>{{data.desc}}</p>
+      <p>Year</p>
+      <p>{{data.make}}</p>
+    </li>
+    <li>
+      <p>Kilometers</p>
+      <p>{{data.distance}} kms</p>
+    </li>
+    <li>
+      <p>Regional Specs</p>
+      <p>{{data.regionalSpecs}}</p>
+    </li>
+    <li>
+      <p>Body Type</p>
+      <p>{{data.bodyType}}</p>
+    </li>
+    <li>
+      <p>Warranty</p>
+      <p>{{data.warranty}}</p>
+    </li>
+    <li>
+      <p>No.of Cylinders</p>
+      <p>{{data.noOfCylinders}}</p>
+    </li>
+    <li>
+      <p>Transmission Type</p>
+      <p>{{data.transmissionType}}</p>
+    </li>
+    <li>
+      <p>Horse Power</p>
+      <p>{{data.horsePower}}</p>
+    </li>
+    <li>
+      <p>Fuel Type</p>
+      <p>{{data.fuelType}}</p>
+    </li>
+    <li>
+      <p>Steering Side</p>
+      <p>{{data.steeringSide}}</p>
+    </li>
+    <li>
+      <p>Exterior Color</p>
+      <p>{{data.exteriorColor}}</p>
+    </li>
+    <li>
+      <p>Interior Color</p>
+      <p>{{data.interiorColor}}</p>
     </li>
     <li>
       <p>Doors</p>
@@ -47,34 +75,6 @@
     <li>
       <p>Seller Type</p>
       <p>{{data.sellerType}}</p>
-    </li>
-    <li>
-      <p>Body Type</p>
-      <p>{{data.bodyType}}</p>
-    </li>
-    <li>
-      <p>No.of Cylinders</p>
-      <p>{{data.noOfCylinders}}</p>
-    </li>
-    <li>
-      <p>Transmission Type</p>
-      <p>{{data.transmissionType}}</p>
-    </li>
-    <li>
-      <p>Regional Specs</p>
-      <p>{{data.regionalSpecs}}</p>
-    </li>
-    <li>
-      <p>Horse Power</p>
-      <p>{{data.horsePower}}</p>
-    </li>
-    <li>
-      <p>Fuel Type</p>
-      <p>{{data.fuelType}}</p>
-    </li>
-    <li>
-      <p>Steering Side</p>
-      <p>{{data.steeringSide}}</p>
     </li>
   </ul>
 </div>
