--- a/src/views/post-details/post-details.scss
+++ b/src/views/post-details/post-details.scss
@@ -10,15 +10,31 @@
     }
     .image-scroll-wrapper {
       overflow-x: auto;
+      scroll-behavior: smooth;
       &::-webkit-scrollbar {
         display: none;
       }
+      .arrows {
+        position: absolute;
+        top: 280px;
+        cursor: pointer;
+        svg {
+          font-size: 1.5rem;
+        }
+        &.left-arrow {
+          left: -30px;
+        }
+        &.right-arrow {
+          right: -30px;
+        }
+      }
       .image-wrapper {
-        display: grid;
-        grid-template-columns: repeat(6, 1fr);
-        grid-template-rows: repeat(6, 5vw);
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: column;
+        max-height: 460px;
         grid-gap: 5px;
-        min-width: 800px;
+        min-width: auto;
         img {
           width: 100%;
           object-position: 50% 50%;
@@ -30,79 +46,16 @@
           position: relative;
           overflow: hidden;
           cursor: pointer;
+          width: 180px;
+          height: 150px;
+          flex: 1 1 150px;
           img {
-            transform: scale(1);
-            transform-origin: 50% 50%;
-            transition: 0.3s ease;
-          }
-          &:hover {
-            img {
-              transform: scale(1.1);
-              transform-origin: 50% 50%;
-            }
+            transform: scale(1) !important;
           }
           &:nth-child(1) {
-            grid-column-start: 1;
-            grid-column-end: 5;
-            grid-row-start: 1;
-            grid-row-end: 7;
-          }
-          // @for $i from 2 through 20 {
-          //   &:nth-child(#{$i}) {
-          //     grid-column-start: 5;
-          //     grid-column-end: 6;
-          //     grid-row-start: 1;
-          //     grid-row-end: 3;
-          //   }
-          // }
-          &:nth-child(2) {
-            grid-column-start: 5;
-            grid-column-end: 6;
-            grid-row-start: 1;
-            grid-row-end: 3;
-          }
-          &:nth-child(3) {
-            grid-column-start: 6;
-            grid-column-end: 6;
-            grid-row-start: 1;
-            grid-row-end: 3;
-          }
-          &:nth-child(4) {
-            grid-column-start: 5;
-            grid-column-end: 6;
-            grid-row-start: 3;
-            grid-row-end: 5;
-          }
-          &:nth-child(5) {
-            grid-column-start: 6;
-            grid-column-end: 6;
-            grid-row-start: 3;
-            grid-row-end: 5;
-          }
-          &:nth-child(6) {
-            grid-column-start: 5;
-            grid-column-end: 6;
-            grid-row-start: 5;
-            grid-row-end: 7;
-          }
-          &:nth-child(7) {
-            grid-column-start: 6;
-            grid-column-end: 6;
-            grid-row-start: 5;
-            grid-row-end: 7;
-            // &:after {
-            //   position: absolute;
-            //   top: 0;
-            //   left: 0;
-            //   width: 100%;
-            //   height: 100%;
-            //   display: flex;
-            //   align-items: center;
-            //   justify-content: center;
-            //   background-color: rgba($black, 0.7);
-            //   color: $white;
-            //   content: "All Photos (" attr(data-count) ")";
-            // }
+            width: 700px;
+            height: 500px;
+            flex: 1 1 auto;
           }
         }
       }
@@ -144,15 +97,7 @@
     }
   }
 }
-@media screen and (max-width: 767px) {
-  .image-title-wrapper {
-    .image-scroll-wrapper {
-      .image-wrapper {
-        min-width: 600px !important;
-      }
-    }
-  }
-}
+
 @media screen and (max-width: 991px) {
   .post-details-wrapper {
     padding-top: 70px !important;
@@ -160,6 +105,9 @@
     .image-title-wrapper {
       display: flex;
       flex-direction: column;
+      .arrows {
+        display: none;
+      }
       h3 {
         order: 2;
         padding: 0 15px;
@@ -181,53 +129,26 @@
         .image-wrapper {
           order: 1;
           margin-bottom: 10px !important;
-          grid-template-columns: repeat(9, 1fr);
-          grid-template-rows: repeat(9, 5vw);
+          display: flex;
+          flex-wrap: wrap;
+          flex-direction: column;
+          max-height: 305px;
           div {
+            width: 180px;
+            height: 150px;
+            flex: 1 1 150px;
             img {
               transform: scale(1) !important;
             }
             &:nth-child(1) {
-              grid-column-start: 1;
-              grid-column-end: 6;
-              grid-row-start: 1;
-              grid-row-end: 10;
-            }
-            &:nth-child(2) {
-              grid-column-start: 6;
-              grid-column-end: 8;
-              grid-row-start: 1;
-              grid-row-end: 4;
-            }
-            &:nth-child(3) {
-              grid-column-start: 8;
-              grid-column-end: 10;
-              grid-row-start: 1;
-              grid-row-end: 4;
-            }
-            &:nth-child(4) {
-              grid-column-start: 6;
-              grid-column-end: 8;
-              grid-row-start: 4;
-              grid-row-end: 7;
-            }
-            &:nth-child(5) {
-              grid-column-start: 8;
-              grid-column-end: 10;
-              grid-row-start: 4;
-              grid-row-end: 7;
-            }
-            &:nth-child(6) {
-              grid-column-start: 6;
-              grid-column-end: 8;
-              grid-row-start: 7;
-              grid-row-end: 10;
+              width: 400px;
+              height: 300px;
+              flex: 1 1 400px;
             }
             &:nth-child(7) {
-              grid-column-start: 8;
-              grid-column-end: 10;
-              grid-row-start: 7;
-              grid-row-end: 10;
+              &:after {
+                display: none;
+              }
             }
           }
         }
