--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -18,34 +18,46 @@
           width: 100%;
           text-align: center;
           width: 100%;
-          padding: 10px 0;
           display: inline-flex;
           flex-direction: column;
           align-items: center;
           position: relative;
           overflow: hidden;
           cursor: pointer;
-          svg {
-            color: $purple;
-          }
-          span {
-            color: $black;
-            font-size: 0.75rem;
-          }
-          &:before {
-            position: absolute;
-            content: "";
+          a {
+            display: inline-flex;
+            align-items: center;
+            flex-direction: column;
             width: 100%;
             height: 100%;
-            top: 0;
-            left: -100%;
-            background-color: $purple-10;
-            transition: 0.3s ease-in-out;
-          }
-          &:hover,
-          &:focus {
+            padding: 10px 0;
+            &.router-link-active {
+              &:before {
+                left: 0;
+              }
+            }
+            svg {
+              color: $purple;
+            }
+            span {
+              color: $black;
+              font-size: 0.75rem;
+            }
             &:before {
-              left: 0;
+              position: absolute;
+              content: "";
+              width: 100%;
+              height: 100%;
+              top: 0;
+              left: -100%;
+              background-color: $purple-10;
+              transition: 0.3s ease-in-out;
+            }
+            &:hover,
+            &:focus {
+              &:before {
+                left: 0;
+              }
             }
           }
         }
