--- a/src/components/header/header.html
+++ b/src/components/header/header.html
@@ -1,8 +1,6 @@
 <div class="header-wrapper container-fluid p-0">
   <div class="row">
-    <div
-      class="col-12 col-xs-12 col-sm-6 col-md-4 justify-content-between d-flex"
-    >
+    <div class="col-12 justify-content-between d-flex">
       <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container p-0 position-relative">
           <router-link class="navbar-brand" to="/">
