--- a/src/components/garage-list/garage-list.html
+++ b/src/components/garage-list/garage-list.html
@@ -20,7 +20,7 @@
       </div>
     </div>
   </div>
-  <div class="row mb-2 pt-3 garage-list-container">
+  <div class="row mb-5 pb-2 pt-3 garage-list-container">
     <div
       class="col-12 col-md-6 mb-3 mb-md-4 pb-1 d-flex"
       v-for="garages in garageList"
