--- a/src/common/colors.scss
+++ b/src/common/colors.scss
@@ -26,3 +26,9 @@ $purpleArray: (
   $purple-20,
   $purple-10
 );
+
+$brand: (
+  "facebook": #4267b2,
+  "linkedin": #0072b1,
+  "instagram": #e1306c,
+);
