--- a/src/components/garage-list/garage-list.html
+++ b/src/components/garage-list/garage-list.html
@@ -18,6 +18,9 @@
           <font-awesome-icon :icon="['fas', 'warehouse']" />Browse Garages
         </div>
       </div>
+      <div class="filter">
+        <div class="options"></div>
+      </div>
     </div>
   </div>
   <div
