--- a/src/components/garage-list/garage-list.scss
+++ b/src/components/garage-list/garage-list.scss
@@ -88,7 +88,7 @@
           span {
             width: 30px;
             svg {
-              color: $green;
+              color: $purple;
             }
           }
           p {
