--- a/src/views/home/home.html
+++ b/src/views/home/home.html
@@ -1,6 +1,6 @@
 <div class="home-container">
   <Banner />
   <Services />
-  <PostList />
+  <PostList :data="fullPostData" :featured="true" />
   <FixedHomeButtons />
 </div>
