--- a/src/components/garage-list/garage-list.scss
+++ b/src/components/garage-list/garage-list.scss
@@ -4,6 +4,19 @@
     position: sticky;
     top: 0;
     z-index: 9;
+    .filter-wrapper {
+      svg {
+        cursor: pointer;
+        color: rgba($black, 0.8);
+        transition: 0.3s ease;
+        margin-right: 3px;
+        font-size: 1.2rem;
+
+        &:hover {
+          color: rgba($black, 0.4);
+        }
+      }
+    }
   }
   .top-tabs {
     display: flex;
