Classifieds category options added

--- a/src/components/common/car-list/car-list.html
+++ b/src/components/common/car-list/car-list.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-12 mt-4 mb-1">
       <h5 class="heading">
-        Select Car <span>{{getSelectedCarMake ? 'Model' : 'Make'}}</span>
+        Select Car <span>{{getSelectedCarMake ? 'Model' : 'Brand'}}</span>
       </h5>
     </div>
     <div class="col-12 my-3 search-wrapper">
