--- a/src/components/common/input-text/input-text.scss
+++ b/src/components/common/input-text/input-text.scss
@@ -3,7 +3,7 @@
   width: 100%;
   input {
     width: 100%;
-    padding: 10px;
+    padding: 8px 10px;
     border: 1px solid rgba($black, 0.05);
     border-radius: 5px;
     box-shadow: $shadow-small;
