--- a/src/components/post-filter/post-filter.html
+++ b/src/components/post-filter/post-filter.html
@@ -18,7 +18,8 @@
       <div class="col-12 col-lg-3 filter-column">
         <label>Year</label>
         <!-- prettier-ignore -->
-        <Select :options="yeardropdownValues" default="Select Year" @selectValue="getSelectInput" />
+        <InputText class="inputText" placeholder="min" @value="" />
+        <InputText class="inputText" placeholder="max" @value="" />
       </div>
       <div class="col-12 col-lg-3 filter-column">
         <label>Trim</label>
@@ -28,7 +29,8 @@
       <div class="col-12 col-lg-3 filter-column">
         <label>Kilometers</label>
         <!-- prettier-ignore -->
-        <Select :options="[]" default="Select Kilometers" @selectValue="getSelectInput" />
+        <InputText class="inputText" placeholder="min" @value="" />
+        <InputText class="inputText" placeholder="max" @value="" />
       </div>
       <div class="col-12 col-lg-3 filter-column">
         <label>Regional Specs</label>
@@ -39,6 +41,12 @@
         <label>Body Type</label>
         <!-- prettier-ignore -->
         <Select :options="[]" default="Select Body Type" @selectValue="getSelectInput" />
+      </div>
+      <div class="col-12 col-lg-3 filter-column">
+        <label>Price</label>
+        <!-- prettier-ignore -->
+        <InputText class="inputText" placeholder="min" @value="" />
+        <InputText class="inputText" placeholder="max" @value="" />
       </div>
       <div class="col-12 col-lg-3 filter-column">
         <label>Warranty</label>
