--- a/src/components/post-filter/post-filter.scss
+++ b/src/components/post-filter/post-filter.scss
@@ -21,6 +21,17 @@
     label {
       font-weight: 700;
       color: $black;
+      width: 100%;
+    }
+    .inputText {
+      width: 48%;
+      box-sizing: border-box;
+      &:nth-child(2) {
+        margin-right: 2%;
+      }
+      &:nth-child(3) {
+        margin-left: 2%;
+      }
     }
   }
   @media screen and (max-width: 991px) {
