--- a/src/views/classifieds/classifieds.html
+++ b/src/views/classifieds/classifieds.html
@@ -1,13 +1,24 @@
 <div class="classifieds-wrapper container p-0 mb-5 pb-1">
   <div class="col-12 bread-crumb mt-4" v-if="getBreadCrumb.length">
+    <span>
+      <img
+        :src="require(`../../assets/${getBreadCrumbImage}`)"
+        class="img-fluid"
+        v-if="getBreadCrumbImage"
+    /></span>
     <span v-for="value in getBreadCrumb" class="text-uppercase"
       >{{value}} <em class="mx-2">&#10095;</em>
     </span>
   </div>
-  <CarList v-if="!getSelectedCarMake || !getSelectedCarModel" />
+  <ClassifiedsCategorySelect
+    v-if="!queryParams.category || (!getSelectedClassifiedCategory && (!getSelectedCarMake || !getSelectedCarModel))"
+  />
+  <CarList
+    v-if="getSelectedClassifiedCategory && (!getSelectedCarMake || !getSelectedCarModel)"
+  />
   <PostList
     :data="getPostData"
     :featured="false"
-    v-if="getSelectedCarMake && getSelectedCarModel"
+    v-if="getSelectedClassifiedCategory && getSelectedCarMake && getSelectedCarModel"
   />
 </div>
