--- a/src/views/classifieds/classifieds.scss
+++ b/src/views/classifieds/classifieds.scss
@@ -8,6 +8,10 @@
       display: inline-flex;
       align-items: center;
       font-weight: 700;
+      img {
+        max-height: 15px;
+        margin-right: 10px;
+      }
       em {
         font-style: normal;
         color: rgba($black, 0.8);
