Font size updates

--- a/src/components/classifieds-category-select/classifieds-category-select.scss
+++ b/src/components/classifieds-category-select/classifieds-category-select.scss
@@ -37,6 +37,7 @@
       margin: 20px 0 0 !important;
       .category-list {
         padding: 20px;
+        font-size: 0.9rem;
         img {
           max-height: 30px;
         }
