--- a/src/components/featured-post-list/featured-post-list.scss
+++ b/src/components/featured-post-list/featured-post-list.scss
@@ -1,6 +1,4 @@
 .post-list-wrapper {
-  // background: url("../../assets/post-bg.png") no-repeat 100% 50%;
-  // background-size: contain;
   padding-left: 0;
   padding-right: 0;
   .card {
@@ -38,9 +36,6 @@
     }
 
     .post-details {
-      .grid-hide {
-        display: none;
-      }
       h5 {
         font-weight: 400;
         font-size: 0.875rem;
@@ -58,7 +53,7 @@
           height: 20px;
           display: inline-block;
           width: 100%;
-          line-height: 120%;
+          line-height: 140%;
         }
         em {
           border-top: 20px solid rgba($white, 0.9);
@@ -109,6 +104,8 @@
     }
 
     .featured-icon {
+      img {
+      }
       &:before {
         content: "";
         border: 15px solid $purple;
@@ -150,88 +147,17 @@
       font-size: 0.875rem;
     }
   }
-  &.list-view {
-    .card {
-      display: flex;
-      flex-direction: row;
-      &:hover {
-        .thumb-wrapper {
-          transform: scale(1);
-        }
-      }
-      .thumb-wrapper {
-        overflow: hidden;
-        max-width: 350px;
-        width: 100%;
-        display: inline-flex;
-      }
-      .post-details {
-        padding: 20px;
-        .grid-hide {
-          display: inline-flex;
-        }
-        > div {
-          width: 100%;
-          display: inline-flex;
-          flex-direction: column;
-        }
-        width: 100%;
-        display: flex;
-        flex-direction: column;
-        .phone {
-          display: inline-flex;
-          flex-direction: row;
-        }
-        h5,
-        p {
-          position: static;
-          width: 100%;
-          height: 100%;
-        }
-        h5 {
-          font-size: 1.2rem;
-          font-weight: 600;
-          span {
-            height: 100%;
-            padding: 0;
-          }
-          &:after {
-            display: none;
-          }
-        }
-        p {
-          margin: 0;
-          font-size: 0.875rem;
-          span {
-            height: 100%;
-            font-size: 0.65rem;
-          }
-        }
-        label {
-          font-size: 0.875rem;
-        }
-        .distance-price {
-          display: inline-flex;
-          justify-content: space-between;
-          .distance,
-          .price {
-            margin-top: 10px;
-            span {
-              padding: 0 !important;
-              font-size: 1rem;
-            }
-          }
-          .price {
-            justify-content: flex-end;
-          }
-        }
-      }
+  ::v-deep .VueCarousel-pagination {
+    > div {
+      margin-top: 0 !important;
+    }
+    button {
+      margin-top: 0 !important;
     }
   }
   @media screen and (max-width: 991px) {
     .card {
       max-height: 150px;
-
       .thumb-wrapper {
         height: 150px;
       }
@@ -267,95 +193,6 @@
         img {
           width: 16px;
           right: 8px;
-        }
-      }
-    }
-    &.list-view {
-      .card {
-        max-height: none;
-        flex-direction: column;
-        margin: 0 15px;
-        border-radius: 5px;
-        box-shadow: $shadow-small;
-        border-color: rgba($black, 0.4);
-        .thumb-wrapper {
-          height: 250px;
-          max-width: 100% !important;
-          img {
-            width: 100%;
-          }
-        }
-        .post-details {
-          padding: 10px !important;
-          h5 {
-            margin: 5px 0 !important;
-            font-weight: 700 !important;
-          }
-          p {
-            margin: 5px 0 !important;
-          }
-          .distance-price {
-            .distance,
-            .price {
-              margin-top: 25px !important;
-            }
-          }
-        }
-      }
-    }
-  }
-  .latest-posts {
-    .heading-wrapper {
-      display: flex;
-      justify-content: space-between;
-      .right-column {
-        display: flex;
-        align-items: center;
-        .view-wrapper {
-          display: inline-flex;
-          align-items: center;
-
-          span {
-            border: 1px solid $purple;
-            padding: 5px 10px;
-            display: inline-flex;
-            align-items: center;
-            cursor: pointer;
-            transition: 0.3s ease;
-            &.active,
-            &:hover {
-              background-color: $purple;
-              svg {
-                color: $white;
-              }
-            }
-            &:first-child {
-              border-radius: 3px 0 0 3px;
-            }
-            &:last-child {
-              border-radius: 0 3px 3px 0;
-            }
-            svg {
-              font-size: 1.2rem;
-              color: $purple;
-            }
-          }
-        }
-        .filter-wrapper {
-          display: inline-flex;
-          align-items: center;
-          margin-right: 15px;
-          svg {
-            cursor: pointer;
-            color: rgba($black, 0.8);
-            transition: 0.3s ease;
-            margin-right: 3px;
-            font-size: 1.2rem;
-
-            &:hover {
-              color: rgba($black, 0.4);
-            }
-          }
         }
       }
     }
